fix: text-align

--- a/src/app/team/components/team-member/team-member.component.scss
+++ b/src/app/team/components/team-member/team-member.component.scss
@@ -12,15 +12,18 @@
 .name {
   padding: 20px 0;
   font-size: 30px;
+  text-align: center;
 }
 
 h2 {
   font-size: 20px;
   font-weight: 200;
+  text-align: center;
 }
 
 p.description {
   font-size: 18px;
+  text-align: center;
 }
 
 .links {
